--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>WebGL Triangle</title>
     <style>
         body { margin: 0; }
-        canvas { width: 100%; height: 100% }
+        canvas { width: 50%; height: 50% }
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
     <script src="dist/bundle.js"></script>
+    <img id="crate-texture" src="RTS_Crate.png" width="0" height="0" /> <!-- preload texture -->
 </body>
 </html>
